@@ -131,6 +131,9 @@ analyzeFolder = function(...) {
 #'   \code{?soundgen:::getPitchHps}
 #' @param harmHeight a list of control parameters for estimating how high
 #'   harmonics reach in the spectrum; see details and \code{?soundgen:::harmHeight}
+#' @param subh a list of control parameters for estimating the strength of
+#'   subharmonics per frame - that is, spectral energy at integer ratios of f0:
+#'   see \code{?soundgen:::subhToHarm}
 #' @param shortestSyl the smallest length of a voiced segment (ms) that
 #'   constitutes a voiced syllable (shorter segments will be replaced by NA, as
 #'   if unvoiced)
@@ -212,8 +215,11 @@ analyzeFolder = function(...) {
 #'   amount of amplitude modulation, see modulationSpectrum}
 #'   \item{specCentroid}{the center of gravity of the frame’s spectrum, first
 #'   spectral moment (Hz)} \item{specSlope}{the slope of linear regression fit
-#'   to the spectrum below cutFreq (dB/kHz)} \item{voiced}{is the current STFT
-#'   frame voiced? TRUE / FALSE}
+#'   to the spectrum below cutFreq (dB/kHz)} \item{subDep}{estimated depth of
+#'   subharmonics per frame: 0 = none, 1 = as strong as f0. NB: this depends
+#'   critically on accurate pitch tracking} \item{subRatio}{the ratio of f0 to
+#'   subharmonics frequency with strength subDep: 2 = period doubling, 3 = f0 /
+#'   3, etc.} \item{voiced}{is the current STFT frame voiced? TRUE / FALSE}
 #' }
 #' @export
 #' @examples
@@ -408,6 +414,7 @@ analyze = function(
   pitchSpec = list(),
   pitchHps = list(),
   harmHeight = list(type = 'n'),
+  subh = list(method = 'cep', nSubh = 5),
   shortestSyl = 20,
   shortestPause = 60,
   interpol = list(win = 75, tol = 0.3, cert = 0.3),
@@ -577,13 +584,13 @@ analyze = function(
   myPars = myPars[!names(myPars) %in% c(
     'x', 'samplingRate', 'scale', 'from', 'to', 'reportEvery',
     'savePlots', 'pitchPlot', 'pitchManual', 'summaryFun', 'invalidArgAction',
-    'loudness', 'roughness', 'novelty')]
+    'loudness', 'roughness', 'novelty', 'subh')]
   # add plot pars correctly, without flattening the lists
   list_pars = c('pitchManual_list', 'pitchPlot',
                 'pitchDom_plotPars', 'pitchAutocor_plotPars',
                 'pitchCep_plotPars', 'pitchSpec_plotPars',
                 'pitchHps_plotPars', 'harmHeight_plotPars',
-                'loudness', 'roughness', 'novelty', 'interpol')
+                'loudness', 'roughness', 'novelty', 'interpol', 'subh')
   for (lp in list_pars) myPars[[lp]] = get(lp)
 
   # analyze
@@ -682,6 +689,7 @@ analyze = function(
   pitchSpec = list(),
   pitchHps = list(),
   harmHeight = list(),
+  subh = list(),
   shortestSyl = 20,
   shortestPause = 60,
   interpol = NULL,
@@ -1282,11 +1290,13 @@ analyze = function(
   result = updateAnalyze(
     result = result,
     pitch_true = pitch_true,
+    pitchCands_list = pitchCands_list,
     spectrogram = s,
     freqs = freqs,
     bin = bin,
     samplingRate = audio$samplingRate,
     harmHeight_pars = harmHeight,
+    subh_pars = subh,
     smooth = smooth,
     smoothing_ww = smoothing_ww,
     smoothingThres = smoothing_ww,
