@@ -1,4 +1,4 @@
-# TODO: analyze - check & fine-tune harmHeight (diff - cep); analyze - pitch 'spec' not working; modulationSpectrum - update description; check optimizePars; reverb - update input, add saveAudio, maybe always return detailed list; check for 2 uncommented playme's in examples; refer to addAM instead of segment or soundgen for saveAudio & play; analyze - calculate subh-to-harm ratio a la Sun & Xu 2002 / Herbst 2020 (or just return the max ratio of spectral peak at f0/int to the ampl of peak at f0)
+# TODO: pitchCep - add option to log; pitch 'spec' not working; modulationSpectrum - update description; check optimizePars; reverb - update input, add saveAudio, maybe always return detailed list; check for 2 uncommented playme's in examples; refer to addAM instead of segment or soundgen for saveAudio & play; analyze - get rid of harmHeight_plotPars
 
 # TODO maybe: only calculate half the ssm to save time (a bit tricky b/c it's not symmetric along the main diag but at 90°); add mel/bark to spectrogram(yScale); inverse distance weighting interpolation instead of interpolMatrix; sharpness in getLoudness(see Fastl p. 242); Viterbi algorithm for pathfinding; check loudness estimation (try to find standard values to compare); adaptive priors for pitch tracking - use first pass to update the prior per sound, then redo pathfinding; pitch tracker based on coincidence of subharmonics of strong spectral peaks (see Fastl & Zwicker p. 124), maybe also refine cepstrum to look for freq windows with a strong cepstral peak, like opera singing over the orchestra; morph multiple sounds not just 2; maybe vectorize lipRad/noseRad; some smart rbind_fill in all ...Folder functions() in case of missing columns; soundgen- use psola when synthesizing 1 gc at a time; gaussian wn implemented in seewave (check updates!); soundgen - pitch2 for dual source (desynchronized vocal folds); AM aspiration noise (not really needed, except maybe for glottis > 0); morph() - tempEffects; streamline saving all plots a la ggsave: filename, path, different supported devices instead of only png(); automatic addition of pitch jumps at high temp in soundgen() (?)
 
