@@ -7,11 +7,13 @@
 updateAnalyze(
   result,
   pitch_true,
+  pitchCands_list = NULL,
   spectrogram,
   freqs = NULL,
   bin = NULL,
   samplingRate = NULL,
-  harmHeight_pars,
+  harmHeight_pars = list(),
+  subh_pars = list(),
   smooth,
   smoothing_ww,
   smoothingThres,
